5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_1333.log
== TEST (2019-03-31 14:50:54) 
-- CODE:
expressao = 30 - 3 ** + 8 // 3 ** 2* 10
print(expressao)
-- OUTPUT:
-7260
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:50:57) 
-- CODE:
expressao = 30 - 3 ** + 8 // 3 ** 2* 10
print(expressao)
-- EXECUTION TIME:
0.187457
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-7260
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:51:04) 
-- CODE:
expressao = 30 - 3 ** + 8 // 3 ** 2* 10
print(expressao)
-- OUTPUT:
-7260
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:56:56) 
-- CODE:
expressao = 2+8+.3--2*10*3*2
print(expressao)
-- OUTPUT:
130.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:57:03) 
-- CODE:
expressao = 2+8+.3--2*10*3*2
print(expressao)
-- EXECUTION TIME:
0.225539
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
130.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:59:20) 
-- CODE:
expressao = 2+8+30-3 *3*2*10
print(expressao)
-- OUTPUT:
-140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:59:31) 
-- CODE:
expressao = 2+8+30-3 //*3*2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 2+8+30-3 //*3*2*10
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:59:39) 
-- CODE:
expressao = 2+8+30-3*3*2*10
print(expressao)
-- OUTPUT:
-140
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:02:00) 
-- CODE:
expressao = 2*3+30-3+8*10
print(expressao)
-- OUTPUT:
113
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:02:05) 
-- CODE:
expressao = 2*3+30-3+8*10
print(expressao)
-- EXECUTION TIME:
0.101704
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
113
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:04:00) 
-- CODE:
expressao = (2*3)3** 2+3* 3**2 30-8
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (2*3)3** 2+3* 3**2 30-8
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:04:18) 
-- CODE:
expressao = (2*3) 3 ** 2+3 3**2 30-8
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (2*3) 3 ** 2+3 3**2 30-8
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:47:31) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:14:52) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:15:19) 
-- CODE:
expressao = 30 - 3**2 + 8 // 3**2*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:15:21) 
-- CODE:
expressao = 30 - 3**2 + 8 // 3**2*10
print(expressao)
-- EXECUTION TIME:
0.142877
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:15:54) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:15:55) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.153617
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
